# Journal-project-fastapi

./: BACKGROUND_JOBS_PLAYBOOK.md  README.md  REDIS_EMAIL_QUEUE_WORKER_GUIDE.md  pyproject.toml
app/: main.py  redis.py  router.py
app/ai/: analysis_service.py  generate_summary.py
app/background_jobs/: scheduler.py  tasks.py  worker.py
app/email/: email.py
app/jobs/: email_jobs.py  enqueue.py  outbox.py  queue.py  rq_compat.py
app/middleware/: auth.py
app/routers/: logs.py  users.py
app/utils/: limiter.py  security.py
app/workers/: outbox_relay.py  requeue_failed.py  rq_worker.py
prisma/: schema.prisma
prisma/migrations/20260314170854_init/: migration.sql
prisma/migrations/20260315081955_/: migration.sql
prisma/migrations/20260316175845_/: migration.sql
prisma/migrations/20260316201615_/: migration.sql
prisma/migrations/20260327002930_/: migration.sql
prisma/migrations/20260327120000_background_jobs_hardening/: migration.sql
prisma/migrations/20260327170000_create_job_outbox/: migration.sql
