[project]
name = "fastapi-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "pydantic>=2.11.4",
    "requests>=2.32.3",
    "uvicorn>=0.34.2",
]
[tool.fastapi]
entrypoint = "main:app"
[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
